// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HoldersTooltip renders correctly for daily grouping: rendered 1`] = `
<div>
  <div
    class="MuiBox-root css-r6fq3j"
  >
    6/6/2022
    :
     
    6293
  </div>
</div>
`;

exports[`HoldersTooltip renders correctly for monthly grouping: rendered 1`] = `
<div>
  <div
    class="MuiBox-root css-r6fq3j"
  >
    11.2021
    :
     
    5273
  </div>
</div>
`;

exports[`HoldersTooltip renders correctly for weekly grouping: rendered 1`] = `
<div>
  <div
    class="MuiBox-root css-r6fq3j"
  >
    11/29/2021 - 12/5/2021
    :
     
    5393
  </div>
</div>
`;
